--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -98,7 +98,7 @@ spec:
         - name: image-name
           value: $(params.transaction-service-image-name)
         - name: path-to-context
-          value: $(params.path-to-dockerfile)
+          value: $(params.path-to-transaction-service-dockerfile)
         - name: path-to-dockerfile
           value: $(params.path-to-transaction-service-dockerfile)
         # - name: additional-tags
@@ -231,7 +231,7 @@ spec:
         - name: image-name
           value: $(params.user-service-image-name)
         - name: path-to-context
-          value: $(params.path-to-dockerfile)
+          value: $(params.path-to-user-service-dockerfile)
         - name: path-to-dockerfile
           value: $(params.path-to-user-service-dockerfile)
         # - name: additional-tags
