--- a/open-toolchain-extender/pr-trigger.yaml
+++ b/open-toolchain-extender/pr-trigger.yaml
@@ -59,6 +59,8 @@ spec:
     - name: deployment-file
       description: file containing the kubernetes deployment definition
       default: deployment.yml
+    - name: tx-dockerfile
+    - name: user-dockerfile
   resourcetemplates:
     - apiVersion: v1
       kind: PersistentVolumeClaim
@@ -107,11 +109,15 @@ spec:
           # - name: path-to-dockerfile
           #   value: bank-app-backend/transaction-service/
           - name: path-to-transaction-service-dockerfile
-            value: bank-app-backend/transaction-service/
+            value: bank-app-backend/
           - name: path-to-user-service-dockerfile
-            value: bank-app-backend/user-service/
+            value: bank-app-backend/
           - name: path-to-simulator-service-dockerfile
             value: "."
+          - name: tx-dockerfile
+            value: Dockerfile.tx
+          - name: user-dockerfile
+            value: Dockerfile.user
           - name: directory
             value: "/workspace/response"
             # value: $(params.path-to-dockerfile)
